# certify-serve

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: test.yml
s/: dev  run-tests
src/certify_server/: __init__.py  certify.code-workspace  main.py
tests/: test_eventbrite.py  test_server.py
